Correct File share Url, Dynamic extra space options, Tabular view star item

--- a/src/components/css/approveRequest.css
+++ b/src/components/css/approveRequest.css
@@ -17,3 +17,11 @@
   display: block;
   margin-top:1rem;
 }
+
+.extra-data-form-group{
+  align-items: flex-end;
+}
+
+.extra-data-form{
+  padding-bottom: 2rem;
+}
